# PhasicJ-rust-prototypes

./: .gitignore  Cargo.toml  WORKSPACE
phasicj/: BUILD.bazel
phasicj/analysis/engine/: BUILD.bazel  Cargo.toml  lib.rs
phasicj/analysis/engine/spec/: BUILD.bazel  Engine.tla
phasicj/analysis/engine/spec/Engine.toolbox/: .project
phasicj/analysis/engine/src/: lib.rs  model.rs  trait_model.rs
phasicj/analysis/language/: BUILD.bazel  Cargo.toml
phasicj/analysis/language/src/: lib.rs  pjal.pest
phasicj/analysis/language/tests/: parse_smoke_test.rs
phasicj/analysis/server/: BUILD.bazel  Cargo.toml  main.rs
phasicj/analysis/shell/: BUILD.bazel  Cargo.toml
phasicj/test_artifacts/java/simple_java_binary/: BUILD.bazel  Main.java
phasicj/tracing/truffle_instrument/: BUILD.bazel  TracingTruffleInstrument.java
phasicj/tracing/truffle_instrument/tests/: BUILD.bazel
